--- a/GesturesPractice/GesturesPractice.csproj
+++ b/GesturesPractice/GesturesPractice.csproj
@@ -22,5 +22,8 @@
     <EmbeddedResource Update="Modal2.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="test.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
